--- a/problems/example-problem/problem.toml
+++ b/problems/example-problem/problem.toml
@@ -1,4 +1,4 @@
-title = "IMO 1959 Problem 1"
+title = "Example Problem"
 uuid = "fda28524-3b6f-487f-9ccc-b3236c4d6638"
 statementFile = "statement.md"
 rating = 1
@@ -8,9 +8,3 @@ rootDir = "lean3"
 defsFile = "defs.lean"
 skeletonFile = "skeleton.lean"
 checkFile = "check.lean"
-
-[languages.lean4]
-rootDir = "lean4"
-defsFile = ""
-skeletonFile = ""
-checkFile = ""
